--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -57,9 +57,47 @@
 .post-card:hover {
   transform: translateY(-10px);
   transition: all 0.3s ease-in-out;
-  box-shadow: 0px 3px 4px 0px rgba(60, 64, 67, 0.3),
-  0px 6px 5px 2px rgba(60, 64, 67, 0.2);
+  box-shadow: 0 0 10px 0 rgba(0,0,0,.05)
 }
 .post-card {
   transition: all 0.3s ease-in-out;
+}
+
+.card-item::before {
+  content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 40.61%, #FFFFFF 100%);
+    transition: all .3s;
+    z-index: 10;
+}
+.card-item:hover:before{
+  background: transparent;
+}
+.card-item:hover .product-name{
+  color: white;
+}
+.line{
+  &:before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 50%;
+    background: #cbb024;
+    bottom: -11px;
+    left: 0;
+    transform: skew(50deg, 0deg);
+  }
+  &:after {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 50%;
+    bottom: -11px;
+    background: #1c4792;
+    right: 0;
+    transform: skew(50deg, 0deg);
+  }
 }
