--- a/src/app/(manager)/admin/product/components/add-product/styles.module.scss
+++ b/src/app/(manager)/admin/product/components/add-product/styles.module.scss
@@ -1,7 +1,7 @@
 .wrapperModal {
     :global {
         .ant-modal {
-            width: 80% !important;
+            width: 563px !important;
             border-radius: 6px;
 
             .ant-modal-content {
