--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -43,3 +43,30 @@
   transform: translateX(0);
   transition-delay: 0.3s;
 }
+
+.headerControl {
+  display: flex;
+
+  a {
+      display: flex;
+      align-items: center;
+
+  }
+
+  .menuWrapperControl {
+      margin-left: 12px;
+      cursor: pointer;
+  }
+
+  .avatar {
+      width: 40px;
+      height: 40px;
+
+      img {
+          width: 100%;
+          height: 100%;
+          border-radius: 50%;
+          object-fit: cover;
+      }
+  }
+}
