--- a/src/app/(main-app)/post/[id]/[slug]/styles.module.scss
+++ b/src/app/(main-app)/post/[id]/[slug]/styles.module.scss
@@ -1,117 +1,119 @@
 .container {
-    display: flex;
-    align-items: center;
-    background-color: #f9f9f9;
-    min-height: 100vh;
-    width: 100%;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  background-color: #f9f9f9;
+  min-height: 100vh;
+  width: 100%;
+  flex-direction: column;
 
-    .commentContainer {
-        width: 75%;
+  .commentContainer {
+    width: 75%;
 
-        @media screen and (max-width: 768px) {
-            width: 90%;
-        }
-
-        .listComment {
-            border: 1px solid #fefefe;
-            margin: 24px 0;
-            border-radius: 4px;
-            background-color: #fff;
-            box-shadow: 0px 0px 10px 0px #0000001a;
-            padding: 12px 16px;
-
-        }
-
-        .submitComment {
-            display: flex;
-            justify-content: flex-end;
-            margin-top: 16px;
-
-            :global {
-                .ant-btn-default {
-                    background-color: #50c297;
-                    color: #fff;
-                    border: none;
-                    border-radius: 4px;
-                    padding: 7px 12px;
-                    height: auto;
-                    font-size: 14px;
-                    font-weight: 500;
-                }
-            }
-        }
-
-        .textArea {
-            border-radius: 4px;
-        }
+    @media screen and (max-width: 768px) {
+      width: 90%;
     }
 
-    .containerDetail {
-        margin-top: 150px;
-        margin-bottom: 50px;
-        width: 75%;
-        padding: 30px;
-        background-color: #fff;
-        border: 1px solid #fefefe;
-        border-radius: 6px;
-        box-shadow: 0px 0px 10px 0px #0000001a;
-
-        @media screen and (max-width: 768px) {
-            width: 90%;
-        }
-
-        .dateTime {
-            border-bottom: 1px solid #6d6d6d6b;
-
-            p {
-                margin-bottom: 4px;
-            }
-        }
-
-        .detailContent {
-            margin-top: 24px;
-
-            img {
-                @media screen and (max-width: 768px) {
-                    height: auto !important;
-                    width: 100% !important;
-                }
-            }
-
-            h1{
-                font-size: 2em;
-            }
-            h2{
-                font-size: 1.5em;
-            }
-            h3{
-                font-size: 1.17em;
-            }
-            h4, h5, h6{
-                font-size: 1em;
-                margin-bottom: 16px;
-                color: #261797;
-            }
-            h1,h2,h3{
-                margin-bottom: 16px;
-                font-weight: bold;
-                color: #261797;
-
-            }
-
-            p{
-                margin-bottom: 25px;
-            }
-
-            pre {
-                background: #f0f0f0;
-                border-radius: 4px;
-                padding: 12px;
-                overflow-y: scroll;
-                word-break: break-word;
-                white-space: pre-line;
-            }
-        }
+    .listComment {
+      border: 1px solid #fefefe;
+      margin: 24px 0;
+      border-radius: 4px;
+      background-color: #fff;
+      box-shadow: 0px 0px 10px 0px #0000001a;
+      padding: 12px 16px;
     }
+
+    .submitComment {
+      display: flex;
+      justify-content: flex-end;
+      margin-top: 16px;
+
+      :global {
+        .ant-btn-default {
+          background-color: #50c297;
+          color: #fff;
+          border: none;
+          border-radius: 4px;
+          padding: 7px 12px;
+          height: auto;
+          font-size: 14px;
+          font-weight: 500;
+        }
+      }
+    }
+
+    .textArea {
+      border-radius: 4px;
+    }
+  }
+
+  .containerDetail {
+    margin-top: 150px;
+    margin-bottom: 50px;
+    width: 75%;
+    padding: 30px;
+    background-color: #fff;
+    border: 1px solid #fefefe;
+    border-radius: 6px;
+    box-shadow: 0px 0px 10px 0px #0000001a;
+
+    @media screen and (max-width: 768px) {
+      width: 90%;
+    }
+
+    .dateTime {
+      border-bottom: 1px solid #6d6d6d6b;
+
+      p {
+        margin-bottom: 4px;
+      }
+    }
+
+    .detailContent {
+      margin-top: 24px;
+
+      img {
+        @media screen and (max-width: 768px) {
+          height: auto !important;
+          width: 100% !important;
+        }
+      }
+
+      h1 {
+        font-size: 2em;
+      }
+      h2 {
+        font-size: 1.5em;
+      }
+      h3 {
+        font-size: 1.17em;
+      }
+      h4,
+      h5,
+      h6 {
+        font-size: 1em;
+        margin-bottom: 16px;
+        color: #261797;
+      }
+      h1,
+      h2,
+      h3 {
+        margin-bottom: 16px;
+        font-weight: bold;
+        color: #261797;
+      }
+
+      p {
+        margin-bottom: 25px;
+      }
+
+      pre {
+        background: #f0f0f0;
+        border-radius: 4px;
+        padding: 12px;
+        overflow-y: scroll;
+        word-break: break-word;
+        white-space: pre-line;
+      }
+    }
+  }
 }
