--- a/src/app/(main-app)/product/[id]/[slug]/styles.module.scss
+++ b/src/app/(main-app)/product/[id]/[slug]/styles.module.scss
@@ -72,6 +72,9 @@
       margin-top: 24px;
 
       img {
+        margin: 24px 0;
+        padding: 0 20px;
+        width: 100%;
         @media screen and (max-width: 768px) {
           height: auto !important;
           width: 100% !important;
