--- a/src/components/text-editor/styles.module.scss
+++ b/src/components/text-editor/styles.module.scss
@@ -16,6 +16,29 @@
       max-height: 450px;
       min-height: 250px;
       padding: 0px 26px !important;
+      h1 {
+        font-size: 2em;
+      }
+      h2 {
+        font-size: 1.5em;
+      }
+      h3 {
+        font-size: 1.17em;
+      }
+      h4,
+      h5,
+      h6 {
+        font-size: 1em;
+        margin-bottom: 16px;
+        color: #261797;
+      }
+      h1,
+      h2,
+      h3 {
+        margin-bottom: 16px;
+        font-weight: bold;
+        color: #261797;
+      }
       @media only screen and (max-width: 650px) {
         max-height: 200px;
         min-height: 150px;
